# startmenu

./: .gitignore  CLAUDE.md  README.md  install.py  launch.sh  pyproject.toml  setup.py
.claude/: settings.local.json
startmenu/: __init__.py  app_grid.py  app_item.py  app_list.py  app_source.py  application.py  config.py  folder_info.py  layout.py  pinned.py  pinned_panel.py  plank_theme.py  power_strip.py  preferences.py  settings.py  style.py  utils.py  window.py
