[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "startmenu"
version = "1.0.0"
description = "A custom application launcher for Linux Mint Cinnamon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# GTK3 dependencies are system packages — install before pip:
#   sudo apt install python3-gi python3-gi-cairo \
#                    gir1.2-gtk-3.0 gir1.2-gdk-3.0 \
#                    gir1.2-gio-2.0 gir1.2-gdkpixbuf-2.0

[project.scripts]
startmenu       = "startmenu:main"
startmenu-setup = "startmenu._setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["startmenu*"]
